# drawidgets

./: .gitignore  .prettierignore  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  analysis_options.yaml  ci.dart  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  rustfmt.toml
code-theme/: CHANGELOG.md  README.md  build.dev.ts  build.ts  dev.ts  package.json  tsconfig.json
code-theme/src/: utils.ts  vscode.ts
code-theme/src/vscode/: color-theme.ts  color.ts  debug-launch.ts
lib/: drawidgets.dart  lints.yaml
lib/src/: animation.dart  decorate.dart  inherit.dart  layout.dart  theme.dart  utils.dart
lib/src/layout/: popup.dart  sidebar.dart  titlebar.dart
lib/src/theme/: theme_adapt.dart  theme_base.dart
src/: ast.rs  lib.rs
test/: drawidgets_test.dart  inherit_test.dart  utils_test.dart
